[US5] (Rachel) Fixed word overflow for notes, title and tags

--- a/frontend/src/styleSheet.css
+++ b/frontend/src/styleSheet.css
@@ -233,9 +233,20 @@ a:hover {
     box-shadow: 0px -10px 30px rgba(0, 0, 0, 0.06);
   }
 
+  .notes-box{
+    width: 346px;
+    height: fit-content;
+    display: flex;
+    border-radius: 25px;
+    background: #FFFFFF;
+    box-shadow: 0px -10px 30px rgba(0, 0, 0, 0.06);
+    word-wrap: break-word;
+    margin-left: 20;
+    padding-top: 20;
+  }
+
   .recipe-title{
     width: 411px;
-    height: 48px;
     font-weight: 800;
     font-size: 30px;
     line-height: 125.29%;
@@ -320,18 +331,16 @@ a:hover {
 
 
 .tags{
-  display: inline-block;
-  flex-direction: row;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
   padding: 2px 12px;
   gap: 6px;
   background: #E5FDF6;
   border-radius: 12px;
-  position: "absolute";
 }
 
 .tag-font{
-  width: 43px;
   height: 20px;
   font-style: normal;
   font-weight: 400;
@@ -358,12 +367,12 @@ a:hover {
 
 .notes-font{
   width: 304px;
-  height: 270px;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.5px;
   color: #0671B7;
+  word-wrap: break-word;
 }
 
 .ingredients-box{
